<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".HomeFragment">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="0dp"
                app:strokeWidth="0dp">

                <com.google.android.material.appbar.AppBarLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white">

                    <androidx.appcompat.widget.Toolbar
                        android:id="@+id/toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Hi, "
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/fullName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/green_nlu"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                    </androidx.appcompat.widget.Toolbar>
                </com.google.android.material.appbar.AppBarLayout>
            </com.google.android.material.card.MaterialCardView>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/subjects"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/btnSee1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:text="@string/see_all"
                            android:textColor="@color/green_nlu"
                            android:textSize="15sp" />
                    </RelativeLayout>

                    <com.facebook.shimmer.ShimmerFrameLayout
                        android:id="@+id/shimmer_subjects"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="24dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <include layout="@layout/shimmer_subject_home_item" />

                            <include layout="@layout/shimmer_subject_home_item" />

                            <include layout="@layout/shimmer_subject_home_item" />
                        </LinearLayout>
                    </com.facebook.shimmer.ShimmerFrameLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_subjects"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="24dp"
                        android:visibility="gone" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/take_exam"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/btnSee2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:text="@string/see_all"
                            android:textColor="@color/green_nlu"
                            android:textSize="15sp" />
                    </RelativeLayout>

                    <com.facebook.shimmer.ShimmerFrameLayout
                        android:id="@+id/shimmer_take_exam"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="24dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <include layout="@layout/shimmer_exam_item" />

                            <include layout="@layout/shimmer_exam_item" />
                        </LinearLayout>
                    </com.facebook.shimmer.ShimmerFrameLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_take_exam"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="24dp"
                        android:visibility="gone" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:text="@string/history"
                            android:textColor="@color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/btnSee3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:text="@string/see_all"
                            android:textColor="@color/green_nlu"
                            android:textSize="15sp" />
                    </RelativeLayout>

                    <com.facebook.shimmer.ShimmerFrameLayout
                        android:id="@+id/shimmer_exam_history"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="24dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <include layout="@layout/shimmer_history_home_item" />

                            <include layout="@layout/shimmer_history_home_item" />
                        </LinearLayout>
                    </com.facebook.shimmer.ShimmerFrameLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_exam_history"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="24dp"
                        android:visibility="gone" />

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</FrameLayout>